fixed z-index issue with navbar

--- a/day-1/src/app/globals.css
+++ b/day-1/src/app/globals.css
@@ -31,11 +31,10 @@ body {
   border: 1px solid rgba(255, 255, 255, 0);
 }
 
-.glass-navigators {
+.glass-card {
   backdrop-filter: blur(20px);
   background: rgba(255, 255, 255, 0.15);
   border: 1px solid rgba(255, 255, 255, 0.25);
-  border-radius: 20px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2),
     inset 0 4px 10px rgba(255, 255, 255, 0.2);
 }
